# miscellaneous

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e_8md_source.html  annotated.html  arena_8h.html  arena_8h__dep__incl.map  arena_8h__dep__incl.md5  arena_8h__incl.map  arena_8h_source.html  base__cases_8h.html  base__cases_8h__dep__incl.map  base__cases_8h__dep__incl.md5  base__cases_8h__incl.map  base__cases_8h__incl.md5  base__cases_8h_source.html  classes.html  classhomework2_1_1_ip_address-members.html  classhomework2_1_1_ip_address.html  classhomework2_1_1_ip_pool-members.html  classhomework2_1_1_ip_pool.html  classhomework3_1_1_custom_list-members.html  classhomework3_1_1_custom_list.html  classhomework3_1_1_linear_stateful_allocator-members.html  classhomework3_1_1_linear_stateful_allocator.html  classhomework3_1_1_memory_resource-members.html  classhomework3_1_1_memory_resource.html  classhomework3_1_1_memory_resource__inherit__graph.map  classhomework3_1_1_memory_resource__inherit__graph.md5  classhomework3_1_1_simple_fixed_arena-members.html  classhomework3_1_1_simple_fixed_arena.html  classhomework3_1_1_simple_fixed_arena__inherit__graph.map  classhomework3_1_1impl_1_1_custom_iterator-members.html  classhomework3_1_1impl_1_1_custom_iterator.html  classhomework5_1_1_controller-members.html  classhomework5_1_1_controller.html  (+427 more)
cmake/: findcppfs.cmake  generate_project.cmake
doc/: Doxyfile  Doxyfile-mcss  mainpage.md  modules.dox
doc/html/: _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e_8md_source.html  annotated.html  arena_8h.html  arena_8h__dep__incl.map  arena_8h__dep__incl.md5  arena_8h__incl.md5  arena_8h_source.html  base__cases_8h.html  base__cases_8h__incl.map  base__cases_8h__incl.md5  base__cases_8h_source.html  classes.html  classhomework2_1_1_ip_address-members.html  classhomework2_1_1_ip_address.html  classhomework2_1_1_ip_pool-members.html  classhomework2_1_1_ip_pool.html  classhomework3_1_1_custom_list-members.html  classhomework3_1_1_custom_list.html  classhomework3_1_1_linear_stateful_allocator-members.html  classhomework3_1_1_linear_stateful_allocator.html  classhomework3_1_1_memory_resource-members.html  classhomework3_1_1_memory_resource.html  classhomework3_1_1_simple_fixed_arena-members.html  classhomework3_1_1_simple_fixed_arena.html  classhomework3_1_1_simple_fixed_arena__inherit__graph.md5  classhomework3_1_1impl_1_1_custom_iterator-members.html  classhomework3_1_1impl_1_1_custom_iterator.html  constexpr_8h.html  constexpr_8h__incl.md5  constexpr_8h_source.html  custom__list_8h.html  custom__list_8h__dep__incl.map  custom__list_8h__dep__incl.md5  custom__list_8h_source.html  custom__list__iterator_8h.html  custom__list__iterator_8h__dep__incl.map  custom__list__iterator_8h__dep__incl.md5  custom__list__iterator_8h_source.html  custom__list__node_8h.html  (+157 more)
ext/: CMakeLists.txt
homeworks/: CMakeLists.txt
homeworks/homework2/: CMakeLists.txt  main.cpp
homeworks/homework2/include/: constexpr.h  ip_address.h  ip_pool.h
homeworks/homework2/src/: ip_address.cpp  ip_pool.cpp
homeworks/homework2/test/: test_homework2.cpp
homeworks/homework2/test/ip_samples/: ip_invalid.tsv
homeworks/homework3/: CMakeLists.txt  main.cpp
homeworks/homework3/include/: arena.h  common.h  custom_list.h  custom_list.tpp  custom_list_iterator.h  custom_list_node.h  example_boost_pool.h  example_custom_list.h  example_interprocess_allocators.h  examples_custom_allocator.h  linear_allocator.h  memory_resource.h
homeworks/homework3/src/: example_boost_pool.cpp  example_custom_allocator.cpp  example_custom_list.cpp  example_interprocess_allocators.cpp  examples_custom_allocator.cpp
homeworks/homework3/test/: test_homework3.cpp
homeworks/homework4/: CMakeLists.txt  main.cpp
homeworks/homework4/include/: base_cases.h  common.h  tuple_cases.h
homeworks/homework4/test/: test_homework4.cpp
homeworks/homework5/: CMakeLists.txt  main.cpp
homeworks/homework5/include/: common.h  controller.h  geometry.h  model.h  view.h  view_cli.h
homeworks/homework5/src/: controller.cpp  geometry.cpp  model.cpp  view.cpp  view_cli.cpp
homeworks/homework5/test/: test_homework5.cpp
homeworks/homework7/: CMakeLists.txt  main.cpp
homeworks/homework7/include/: common.h  logger.h  parser.h  storage.h
homeworks/homework7/src/: parser.cpp
homeworks/homework7/test/: test_homework7.cpp
homeworks/timus/: timus.cpp
include/: h2_ip_filter.h  h2_timus.h
include/homework2/: constexpr.h  ip_address.h  ip_pool.h
lib/: CMakeLists.txt
scripts/: build.sh
src/homework2/: ip_address.cpp  ip_pool.cpp
test/: test_main.cpp
